--- a/README.html
+++ b/README.html
@@ -28,7 +28,7 @@
 	
 	<!-- Adding link to the button on the onclick event -->
 	<button class="GFG"
-	onclick="window.location.href = 'https://ide.geeksforgeeks.org';">
+	onclick="window.location.href = 'https://drive.google.com/drive/folders/1KLPiE_UMtMCs69pd7q3IL3_gVzvJvC2G?usp=sharing';">
 		Click Here
 	</button>
 </body>
